--- a/src/cellsociety/Visual.properties
+++ b/src/cellsociety/Visual.properties
@@ -1,10 +1,5 @@
-BackCommand=Back
-NextCommand=Next
-HomeCommand=Home
-GoCommand=Go
-AddFavoriteCommand=Add Favorites
-FavoritePrompt=Enter name
-ErrorTitle=Browser Error
-FavoritePromptTitle=Add Favorite
-FavoriteFirstItem=All Favorites
-SetHomeCommand=Set Home
+PlayButton=Play
+PauseButton=Pause
+StepButton=Step
+SpeedUpButton=Speed Up
+SlowDownButton=Slow Down
