--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ sonar_analysis:
       mvn -X sonar:sonar \
       -Dsonar.host.url=http://coursework.cs.duke.edu:9000 \
       -Dsonar.sources=. -Dsonar.java.binaries=. \
-      -Dsonar.exclusions=**/*.xml,**.*.css
+      -Dsonar.exclusions=**/*.xml,**/*.css,src/test/**
   tags:
     - sonarqube
   only:
