get chart to appear in new window

--- a/src/cellsociety/view/resources/English.properties
+++ b/src/cellsociety/view/resources/English.properties
@@ -4,6 +4,7 @@ StepButton=Step
 SpeedUpButton=Speed Up
 SlowDownButton=Slow Down
 UploadButton=Upload File
+GraphButton=View Graph
 InvalidWidth=Invalid Number of Cells in Row
 InvalidHeight=Invalid Number of Cell Rows
 MissingCellRows=No Cell Rows
