add graph labels and got various grid styles to work

--- a/src/cellsociety/view/resources/Chinese.properties
+++ b/src/cellsociety/view/resources/Chinese.properties
@@ -5,3 +5,30 @@ SpeedUpButton=加速
 SlowDownButton=减速
 UploadButton=上传文件
 GraphButton=查看图表
+GameofLife0=DEAD
+GameofLife1=ALIVE
+Percolation0=BLOCKED
+Percolation1=OPEN
+Percolation2=PERCOLATED
+Fire0=TREE
+Fire1=BURNING
+Fire2=EMPTY
+Segregation0=EMPTY
+Segregation1=AGENT A
+Segregation2=AGENT B
+Wator0=WATER
+Wator1=FISH
+Wator2=SHARK
+RockPaperScissors0=ROCK
+RockPaperScissors1=PAPER
+RockPaperScissors2=SCISSORS
+ForagingAnts0=EMPTY
+ForagingAnts1=HOME
+ForagingAnts2=FOOD
+ForagingAnts3=ANT
+BylsLoop0=EMPTY
+BylsLoop1=DATA PATH
+BylsLoop2=WALL
+BylsLoop3=EXTEND SIGNAL
+BylsLoop4=LEFT SIGNAL
+BylsLoop5=DISCONNECT SIGNAL
