improved exception and changed info to map

--- a/src/cellsociety/view/resources/English.properties
+++ b/src/cellsociety/view/resources/English.properties
@@ -14,3 +14,7 @@ Missingtype=Missing Field: Type
 Missingtitle=Missing Field: Title 
 Missingauthor=Missing Field: Author
 Missingdescription=Missing Field: Description
+BadType=Missing or Invalid Field: Type
+BadParameters=Missing Parameters Section or Non-int Values
+BadInformation=Missing Information Section or Non-String Values
+BadXML=Not XML File or Empty XML 
