--- a/src/cellsociety/view/resources/Chinese.properties
+++ b/src/cellsociety/view/resources/Chinese.properties
@@ -16,9 +16,9 @@ Fire2=空
 Segregation0=空
 Segregation1=A
 Segregation2=B
-Wator0=水
-Wator1=鱼
-Wator2=鲨鱼
+WaTor0=水
+WaTor1=鱼
+WaTor2=鲨鱼
 RockPaperScissors0=石头
 RockPaperScissors1=布
 RockPaperScissors2=剪刀
