--- a/src/cellsociety/view/resources/English.properties
+++ b/src/cellsociety/view/resources/English.properties
@@ -25,9 +25,9 @@ Fire2=EMPTY
 Segregation0=EMPTY
 Segregation1=AGENT A
 Segregation2=AGENT B
-Wator0=WATER
-Wator1=FISH
-Wator2=SHARK
+WaTor0=WATER
+WaTor1=FISH
+WaTor2=SHARK
 RockPaperScissors0=ROCK
 RockPaperScissors1=PAPER
 RockPaperScissors2=SCISSORS
