add compare button

--- a/src/cellsociety/view/resources/Spanish.properties
+++ b/src/cellsociety/view/resources/Spanish.properties
@@ -4,6 +4,7 @@ StepButton=Siguiente
 SpeedUpButton=Acelerar
 SlowDownButton=Ralentizar
 UploadButton=Cargar archivo
+CompareButton=Comparar
 GraphButton=Ver gráfico
 GameofLife0=MUERTO
 GameofLife1=VIVO
@@ -16,9 +17,9 @@ Fire2=VACÍO
 Segregation0=VACÍO
 Segregation1=AGENTE A
 Segregation2=AGENTE B
-Wator0=AGUA
-Wator1=PEZ
-Wator2=TIBURÓN
+WaTor0=AGUA
+WaTor1=PEZ
+WaTor2=TIBURÓN
 RockPaperScissors0=PIEDRA
 RockPaperScissors1=PAPEL
 RockPaperScissors2=TIJERA
