--- a/src/cellsociety/view/resources/Chinese.properties
+++ b/src/cellsociety/view/resources/Chinese.properties
@@ -4,6 +4,7 @@ StepButton=下一步
 SpeedUpButton=加速
 SlowDownButton=减速
 UploadButton=上传文件
+CompareButton=比较
 GraphButton=查看图表
 GameofLife0=死
 GameofLife1=活
