--- a/src/cellsociety/view/resources/English.properties
+++ b/src/cellsociety/view/resources/English.properties
@@ -4,6 +4,7 @@ StepButton=Step
 SpeedUpButton=Speed Up
 SlowDownButton=Slow Down
 UploadButton=Upload File
+CompareButton=Compare
 GraphButton=View Graph
 InvalidWidth=Invalid Number of Cells in Row
 InvalidHeight=Invalid Number of Cell Rows
