refactor code for buttons

--- a/src/cellsociety/view/resources/Chinese.properties
+++ b/src/cellsociety/view/resources/Chinese.properties
@@ -5,6 +5,7 @@ SpeedUpButton=加速
 SlowDownButton=减速
 UploadButton=上传文件
 CompareButton=比较
+EditButton=Edit
 GraphButton=查看图表
 GameofLife0=死
 GameofLife1=活
