--- a/src/cellsociety/view/resources/Spanish.properties
+++ b/src/cellsociety/view/resources/Spanish.properties
@@ -4,6 +4,7 @@ StepButton=Siguiente
 SpeedUpButton=Acelerar
 SlowDownButton=Ralentizar
 UploadButton=Cargar archivo
+EditButton=Edit
 CompareButton=Comparar
 GraphButton=Ver gráfico
 GameofLife0=MUERTO
