multiple window simulations

--- a/src/cellsociety/view/resources/English.properties
+++ b/src/cellsociety/view/resources/English.properties
@@ -4,8 +4,8 @@ StepButton=Step
 SpeedUpButton=Speed Up
 SlowDownButton=Slow Down
 UploadButton=Upload File
-EditButton=Edit
-CompareButton=Compare
+EditButton=Edit Configuration
+AddButton=Add Simulation Window
 GraphButton=View Graph
 InvalidWidth=Invalid Number of Cells in Row
 InvalidHeight=Invalid Number of Cell Rows
