--- a/src/cellsociety/view/resources/Spanish.properties
+++ b/src/cellsociety/view/resources/Spanish.properties
@@ -4,8 +4,8 @@ StepButton=Siguiente
 SpeedUpButton=Acelerar
 SlowDownButton=Ralentizar
 UploadButton=Cargar archivo
-EditButton=Edit
-CompareButton=Comparar
+EditButton=Editar Configuración
+AddButton=Agregar Ventana de Simulación
 GraphButton=Ver gráfico
 GameofLife0=MUERTO
 GameofLife1=VIVO
