--- a/src/cellsociety/view/resources/Chinese.properties
+++ b/src/cellsociety/view/resources/Chinese.properties
@@ -4,8 +4,8 @@ StepButton=下一步
 SpeedUpButton=加速
 SlowDownButton=减速
 UploadButton=上传文件
-CompareButton=比较
-EditButton=Edit
+AddButton=添加模拟窗口
+EditButton=编辑设置
 GraphButton=查看图表
 GameofLife0=死
 GameofLife1=活
