fix error messages

--- a/src/cellsociety/view/resources/English.properties
+++ b/src/cellsociety/view/resources/English.properties
@@ -12,6 +12,7 @@ InvalidHeight=Invalid Number of Cell Rows
 MissingCellRows=No Cell Rows
 MissingWidth=Missing Field: Width
 MissingHeight=Missing Field: Height
+InvalidCellState=Invalid Cell State
 Missingtype=Missing Field: Type
 Missingtitle=Missing Field: Title 
 Missingauthor=Missing Field: Author
