add configuration button

--- a/src/cellsociety/view/resources/Chinese.properties
+++ b/src/cellsociety/view/resources/Chinese.properties
@@ -5,6 +5,7 @@ SpeedUpButton=加速
 SlowDownButton=减速
 UploadButton=上传文件
 AddButton=添加模拟窗口
+ConfigurationButton=Get Current XML
 EditButton=编辑设置
 GraphButton=查看图表
 GameofLife0=死
