--- a/src/cellsociety/view/resources/English.properties
+++ b/src/cellsociety/view/resources/English.properties
@@ -7,20 +7,7 @@ UploadButton=Upload File
 EditButton=Edit Configuration
 AddButton=Add Simulation Window
 GraphButton=View Graph
-InvalidWidth=Invalid Number of Cells in Row
-InvalidHeight=Invalid Number of Cell Rows
-MissingCellRows=No Cell Rows
-MissingWidth=Missing Field: Width
-MissingHeight=Missing Field: Height
-InvalidCellState=Invalid Cell State
-Missingtype=Missing Field: Type
-Missingtitle=Missing Field: Title 
-Missingauthor=Missing Field: Author
-Missingdescription=Missing Field: Description
-BadType=Missing or Invalid Field: Type
-BadParameters=Missing Parameters Section or Non-int Values
-BadInformation=Missing Information Section or Non-String Values
-BadXML=Not XML File or Empty XML
+ConfigurationButton=Get Current XML
 GameofLife0=DEAD
 GameofLife1=ALIVE
 Percolation0=BLOCKED
