--- a/src/cellsociety/view/resources/Spanish.properties
+++ b/src/cellsociety/view/resources/Spanish.properties
@@ -7,6 +7,7 @@ UploadButton=Cargar archivo
 EditButton=Editar Configuración
 AddButton=Agregar Ventana de Simulación
 GraphButton=Ver gráfico
+ConfigurationButton=Get Current XML
 GameofLife0=MUERTO
 GameofLife1=VIVO
 Percolation0=BLOQUEADO
