--- a/src/cellsociety/view/resources/Spanish.properties
+++ b/src/cellsociety/view/resources/Spanish.properties
@@ -35,3 +35,5 @@ BylsLoop2=RUTA DE DATOS
 BylsLoop3=EXTENDER SEÑAL
 BylsLoop4=SEÑAL IZQUIERDA
 BylsLoop5=SEÑAL DE DESCONEXIÓN
+SugarScape0=VACÍO
+SugarScape1=AGENTE
