--- a/src/cellsociety/view/resources/Spanish.properties
+++ b/src/cellsociety/view/resources/Spanish.properties
@@ -4,10 +4,10 @@ StepButton=Siguiente
 SpeedUpButton=Acelerar
 SlowDownButton=Ralentizar
 UploadButton=Cargar archivo
-EditButton=Editar Configuración
-AddButton=Agregar Ventana de Simulación
+EditButton=Editar configuración
+AddButton=Agregar ventana de simulación
 GraphButton=Ver gráfico
-ConfigurationButton=Get Current XML
+ConfigurationButton=Obtener XML actual
 GameofLife0=MUERTO
 GameofLife1=VIVO
 Percolation0=BLOQUEADO
